--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 SUPABASE_URL=
-
 SUPABASE_KEY=
 SUPABASE_SERVICE_KEY=
-OPENAI_API_KEY=
 REPLICATE_API_TOKEN=
+OPENAI_API_KEY=
+RAI_GATEWAY_BACKEND_URL=
+SUPABASE_JWT_SECRET=
