--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
-python-dotenv
-fastapi
-uvicorn
-rich
-requests
-pillow
-replicate
-boto3~=1.28.7
-botocore~=1.31.7
-openai
-streamlit
-aiohttp
-moviepy
-aiofiles
-openai-whisper
-opencv-python
+aiofiles==24.1.0
+aiohttp==3.8.4
+aiohttp==3.10.5
+aiosmtplib==3.0.2
+boto3==1.28.54
+boto3==1.28.85
+botocore==1.31.64
+botocore==1.31.85
+fastapi==0.115.0
+httpx==0.27.2
+librosa==0.10.2.post1
+moviepy==1.0.3
+numpy==1.24.2
 numpy==1.24.3
-supabase
-python-multipart
-librosa
-PyJWT
-aiosmtplib
+openai_whisper==20231117
+opencv_python==4.7.0.72
+opencv_python==4.10.0.84
+Pillow==9.5.0
+Pillow==10.4.0
+pydantic==2.9.2
+PyJWT==2.9.0
+PyJWT==2.9.0
+python-dotenv==1.0.1
+replicate==0.32.0
+Requests==2.32.3
+supabase==2.8.1
+uvicorn==0.31.0
