--- a/.github/workflows/cicd_prod.yaml
+++ b/.github/workflows/cicd_prod.yaml
@@ -1,8 +1,8 @@
 name: Docker Image CI for reelsai.pro
 
-on:
-  push:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: [ "main" ]
 
 jobs:
   build-and-deploy:
