--- a/.github/workflows/cicd_prod.yaml
+++ b/.github/workflows/cicd_prod.yaml
@@ -1,10 +1,15 @@
-name: Docker Image CI for reelsai.pro
+name: Docker Image CI/CD for reelsai.pro
 
 on:
   workflow_dispatch:
+  # Uncomment the following lines if you want to trigger on push to main
+  # push:
+  #   branches: [ "main" ]
 
-#   push:
-#     branches: [ "main" ]
+env:
+  AWS_REGION: ap-south-1
+  ECR_REPOSITORY: reelsai-pro
+  CONTAINER_NAME: reelsai-pro
 
 jobs:
   build-and-deploy:
@@ -21,7 +26,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1  # Mumbai region
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -30,40 +35,48 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: reelsai-pro  # Update this to your ECR repository name
         IMAGE_TAG_SHA: cicd-prod-${{ github.sha }}
         IMAGE_TAG_LATEST: cicd-prod-latest
-        SUPABASE_URL: ${{ vars.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ vars.SUPABASE_KEY }}
-        SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
-        REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        RAI_GATEWAY_BACKEND_URL: ${{ vars.RAI_GATEWAY_BACKEND_URL }}
-        SUPABASE_JWT_SECRET: ${{ secrets.SUPABASE_JWT_SECRET }}
-        ZOHO_APP_PASSWORD: ${{ secrets.ZOHO_APP_PASSWORD }}
-        NEW_RELIC_LICENSE_KEY: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
-        NEW_RELIC_APP_NAME: ${{ secrets.NEW_RELIC_APP_NAME }}
+        NEW_RELIC_APP_NAME: ra-gateway-prod
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA \
-          --build-arg SUPABASE_URL=$SUPABASE_URL \
-          --build-arg SUPABASE_KEY=$SUPABASE_KEY \
-          --build-arg SUPABASE_SERVICE_KEY=$SUPABASE_SERVICE_KEY \
-          --build-arg REPLICATE_API_TOKEN=$REPLICATE_API_TOKEN \
-          --build-arg OPENAI_API_KEY=$OPENAI_API_KEY \
-          --build-arg RAI_GATEWAY_BACKEND_URL=$RAI_GATEWAY_BACKEND_URL \
-          --build-arg SUPABASE_JWT_SECRET=$SUPABASE_JWT_SECRET \
-          --build-arg ZOHO_APP_PASSWORD=$ZOHO_APP_PASSWORD \
-          --build-arg NEW_RELIC_LICENSE_KEY=$NEW_RELIC_LICENSE_KEY \
-          --build-arg NEW_RELIC_APP_NAME=$NEW_RELIC_APP_NAME \
+        docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG_SHA \
+          --build-arg SUPABASE_URL=${{ vars.SUPABASE_URL }} \
+          --build-arg SUPABASE_KEY=${{ vars.SUPABASE_KEY }} \
+          --build-arg SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }} \
+          --build-arg REPLICATE_API_TOKEN=${{ secrets.REPLICATE_API_TOKEN }} \
+          --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+          --build-arg RAI_GATEWAY_BACKEND_URL=${{ vars.RAI_GATEWAY_BACKEND_URL }} \
+          --build-arg SUPABASE_JWT_SECRET=${{ secrets.SUPABASE_JWT_SECRET }} \
+          --build-arg ZOHO_APP_PASSWORD=${{ secrets.ZOHO_APP_PASSWORD }} \
+          --build-arg NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENSE_KEY }} \
+          --build-arg NEW_RELIC_APP_NAME=${{ env.NEW_RELIC_APP_NAME }} \
           .
+        docker tag $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG_SHA $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG_LATEST
+        docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG_SHA
+        docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG_LATEST
 
-        docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
-        
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
-
-    # - name: Deploy to App Runner
-    #   run: |
-    #     aws apprunner start-deployment \
-    #       --service-arn ${{ secrets.APPRUNNER_SERVICE_ARN }} \
-    #       --region ap-south-1
+    - name: Deploy to EC2
+      env:
+        PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        HOST: ${{ vars.EC2_HOST }}
+        USER: ${{ vars.EC2_USER }}
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        ssh -o StrictHostKeyChecking=no -i private_key ${USER}@${HOST} '
+          # Login to ECR
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
+          
+          # Pull the image
+          sudo docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG_LATEST }}
+          
+          # Stop and remove the existing container
+          sudo docker stop ${{ env.CONTAINER_NAME }} || true
+          sudo docker rm ${{ env.CONTAINER_NAME }} || true
+          
+          # Run the new container
+          sudo docker run -d --name ${{ env.CONTAINER_NAME }} \
+            -p 8000:8000 \
+            --restart unless-stopped \
+            ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG_LATEST }}
+        '
+        rm -f private_key
