--- a/.github/workflows/cicd_prod.yaml
+++ b/.github/workflows/cicd_prod.yaml
@@ -10,6 +10,18 @@ env:
   AWS_REGION: ap-south-1
   ECR_REPOSITORY: reelsai-pro
   CONTAINER_NAME: reelsai-pro
+  SUPABASE_URL: ${{ vars.SUPABASE_URL }}
+  SUPABASE_KEY: ${{ vars.SUPABASE_KEY }}
+  SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+  REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  RAI_GATEWAY_BACKEND_URL: ${{ vars.RAI_GATEWAY_BACKEND_URL }}
+  SUPABASE_JWT_SECRET: ${{ secrets.SUPABASE_JWT_SECRET }}
+  ZOHO_APP_PASSWORD: ${{ secrets.ZOHO_APP_PASSWORD }}
+  NEW_RELIC_LICENSE_KEY: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
+  NEW_RELIC_APP_NAME: ra-gateway-prod
+  SENTRY_DSN: ${{ vars.SENTRY_DSN }}
+  APP_ENV: prod
 
 jobs:
   build-and-deploy:
@@ -37,24 +49,21 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG_SHA: cicd-prod-${{ github.sha }}
         IMAGE_TAG_LATEST: cicd-prod-latest
-        NEW_RELIC_APP_NAME: ra-gateway-prod
-        SENTRY_DSN: ${{ vars.SENTRY_DSN }}
-        APP_ENV: prod
       run: |
         docker build \
           --tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA \
-          --build-arg SUPABASE_URL=${{ vars.SUPABASE_URL }} \
-          --build-arg SUPABASE_KEY=${{ vars.SUPABASE_KEY }} \
-          --build-arg SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }} \
-          --build-arg REPLICATE_API_TOKEN=${{ secrets.REPLICATE_API_TOKEN }} \
-          --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
-          --build-arg RAI_GATEWAY_BACKEND_URL=${{ vars.RAI_GATEWAY_BACKEND_URL }} \
-          --build-arg SUPABASE_JWT_SECRET=${{ secrets.SUPABASE_JWT_SECRET }} \
-          --build-arg ZOHO_APP_PASSWORD=${{ secrets.ZOHO_APP_PASSWORD }} \
-          --build-arg NEW_RELIC_LICENSE_KEY=${{ secrets.NEW_RELIC_LICENSE_KEY }} \
-          --build-arg NEW_RELIC_APP_NAME=$NEW_RELIC_APP_NAME \
-          --build-arg SENTRY_DSN=$SENTRY_DSN \
-          --build-arg APP_ENV=$APP_ENV \
+          --build-arg SUPABASE_URL="${SUPABASE_URL}" \
+          --build-arg SUPABASE_KEY="${SUPABASE_KEY}" \
+          --build-arg SUPABASE_SERVICE_KEY="${SUPABASE_SERVICE_KEY}" \
+          --build-arg REPLICATE_API_TOKEN="${REPLICATE_API_TOKEN}" \
+          --build-arg OPENAI_API_KEY="${OPENAI_API_KEY}" \
+          --build-arg RAI_GATEWAY_BACKEND_URL="${RAI_GATEWAY_BACKEND_URL}" \
+          --build-arg SUPABASE_JWT_SECRET="${SUPABASE_JWT_SECRET}" \
+          --build-arg ZOHO_APP_PASSWORD="${ZOHO_APP_PASSWORD}" \
+          --build-arg NEW_RELIC_LICENSE_KEY="${NEW_RELIC_LICENSE_KEY}" \
+          --build-arg NEW_RELIC_APP_NAME="${NEW_RELIC_APP_NAME}" \
+          --build-arg SENTRY_DSN="${SENTRY_DSN}" \
+          --build-arg APP_ENV="${APP_ENV}" \
           .
         docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA
