--- a/.github/workflows/cicd_prod.yaml
+++ b/.github/workflows/cicd_prod.yaml
@@ -26,6 +26,7 @@ env:
   ELEVEN_LABS_API_KEY: ${{ secrets.ELEVEN_LABS_API_KEY }}
   DODO_WEBHOOK_SECRET_KEY: ${{ vars.DODO_WEBHOOK_SECRET_KEY }}
   REDIRECT_URL: ${{ vars.REDIRECT_URL }}
+  IS_PRODUCTION: "true"
 
 jobs:
   build:
@@ -73,6 +74,7 @@ jobs:
             --build-arg ELEVEN_LABS_API_KEY="${ELEVEN_LABS_API_KEY}" \
             --build-arg DODO_WEBHOOK_SECRET_KEY="${DODO_WEBHOOK_SECRET_KEY}" \
             --build-arg REDIRECT_URL="${REDIRECT_URL}" \
+            --build-arg IS_PRODUCTION="${IS_PRODUCTION}" \
             .
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_SHA $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG_LATEST
           echo "Pushing Docker images to ECR..."
