--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ SLACKBOT_RA_WEBHOOK_URL=
 ELEVEN_LABS_API_KEY=
 DODO_WEBHOOK_SECRET_KEY=
 REDIRECT_URL=
+VIDEOAIDITOR_API_KEY=
+ASSEMBLYAI_API_KEY=
